--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -47,10 +47,17 @@
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Enable Penalties"
                                      Color="Color.Secondary" />
+
                         <MudSwitchM3 @bind-Checked="Model.EnableFatality"
                                      ThumbIcon="@Icons.Material.Filled.Done"
                                      ThumbOffIcon="@Icons.Material.Filled.Close"
                                      Label="Enable Fatalities"
+                                     Color="Color.Secondary" />
+
+                        <MudSwitchM3 @bind-Checked="Model.AllowContracting"
+                                     ThumbIcon="@Icons.Material.Filled.Done"
+                                     ThumbOffIcon="@Icons.Material.Filled.Close"
+                                     Label="Enable Contracts"
                                      Color="Color.Secondary" />
                     </MudStack>
                     @if (errorValidations.Any())
