--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -43,6 +43,9 @@
                     <MudText Typo="Typo.body2">
                         Fatalities are @(context.Item.Options.HasFlag(LeagueOptions.EnableFatality) ? "enabled" : "disabled")
                     </MudText>
+                    <MudText Typo="Typo.body2">
+                        Contracts are @(context.Item.Options.HasFlag(LeagueOptions.AllowContracting) ? "enabled" : "disabled")
+                    </MudText>
                 </MudPaper>
 
                 @if (context.Item.DevelopmentRanges != null)
