--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -101,7 +101,7 @@
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd>
-                        <DriverPosition Number="@context.Position" Colour="@context.Colour" Accent="@context.Accent" />
+                        <DriverPosition Number="@context.Position" />
                     </MudTd>
                     <MudTd>
                         <GridChange Change="@context.GridChange" />
