--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -287,9 +287,7 @@
 
     private async Task AddAllEntrants()
     {
-        Model.CombineEntrantModels();
-
-        var rootEntrants = Model.SeasonEngines.Select(e => e.Record).ToList();
+        var rootEntrants = Model.CombineEntrantsToRoot();
 
         await _entrantService.PersistSeasonEntrants(rootEntrants);
 
