--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -20,32 +20,39 @@
                     <MudText Typo="Typo.subtitle1">For entrants</MudText>
                     <MudDivider />
 
-                    <MudChipSet @bind-SelectedChip="@entrantChip" Mandatory="true">
+                    <MudChipSet SelectedChipChanged="SetAndLoadEntrants" Mandatory="true" ReadOnly="@loadingEntrants">
                         <MudChip Color="Color.Primary" Value="Entrant.Driver">Driver</MudChip>
                         <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
                         <MudChip Color="Color.Primary" Value="Entrant.Track">Track</MudChip>
                     </MudChipSet>
 
-                    <MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="LoadEntrants">Load</MudButton>
+                    @*<MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="LoadEntrants">Load</MudButton>*@
 
                     <MudText Typo="Typo.subtitle1" Class="mt-2">Assignment settings</MudText>
                     <MudDivider />
 
                     <MudText Color="Color.Warning">Todo select which traits to assign</MudText>
-                    <MudText Color="Color.Warning">Todo select how many traits</MudText>
                     <MudText Color="Color.Warning">Todo random removal option</MudText>
-
-                    <MudDivider />
 
                     @if (RelevantTraits?.Any() == true)
                     {
-                        <MudText Color="Color.Success">Relevant traits</MudText>
-                        @foreach (var trait in RelevantTraits)
+                        <MudText Typo="Typo.subtitle1" Color="Color.Success">Relevant traits</MudText>
+                        <MudDivider />
+                        @*@foreach (var trait in RelevantTraits)
                         {
                             <MudTooltip Text="@(trait.Description)" Color="Color.Primary">
                                 <MudText Color="Color.Primary">@(trait.Name) - [@(trait.Id)]</MudText>
                             </MudTooltip>
-                        }
+                        }*@
+
+                        <MudListExtended T="string" Dense="true">
+                            @foreach (var trait in RelevantTraits)
+                            {
+                                <MudListItemExtended T="string"
+                                                     Text="@trait.Name"
+                                                     SecondaryText="@trait.Description" />
+                            }
+                        </MudListExtended>
                     }
                 </MudStack>
             </MudPaper>
@@ -56,11 +63,16 @@
                 <MudText>Click on a driver to assign a random trait to them</MudText>
                 @if (Entrants != null)
                 {
-                    <MudTable T="EntrantAssignee" Items="@Entrants" Dense="true" Hover="true" OnRowClick="OnClickAssignRandomTrait">
+                    <MudTable T="EntrantAssignee"
+                              Items="@Entrants"
+                              RowsPerPage="15"
+                              Dense="true"
+                              Hover="true"
+                              OnRowClick="OnClickAssignRandomTrait">
                         <ToolBarContent>
                             <MudText Typo="Typo.h5">Entrants</MudText>
                             <MudSpacer />
-                            <MudButton Color="Color.Secondary" OnClick="RandomEntrantAssignTrait">Random</MudButton>
+                            <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="RandomEntrantAssignTrait">Random</MudButton>
                         </ToolBarContent>
                         <HeaderContent>
                             <MudTh>Name</MudTh>
@@ -68,7 +80,7 @@
                         </HeaderContent>
                         <RowTemplate>
                             <MudTd>
-                                <MudText>@(context.Name)</MudText>
+                                <MudText>@context.Name</MudText>
                             </MudTd>
                             <MudTd>
                                 @foreach (var traitId in context.ExistingTraitIds)
@@ -77,13 +89,19 @@
                                 }
                             </MudTd>
                         </RowTemplate>
+                        <PagerContent>
+                            <MudPagination SelectedChanged="PageChange" Count="@((_assignTable.GetFilteredItemsCount() + _assignTable.RowsPerPage - 1) / _assignTable.RowsPerPage)"
+                                           Variant="Variant.Outlined"
+                                           Class="pa-4" />
+                        </PagerContent>
                     </MudTable>
                 }
             </MudPaper>
         </MudItem>
         <MudItem xs="4">
             <MudPaper Class="pa-2">
-                <MudText>Can save from here, click row to remove</MudText>
+                <MudText>Click on persist to save all the assigned traits</MudText>
+                <MudText>Click on a row to remove the entrant</MudText>
                 @if (AssignedEntrants.Any())
                 {
                     <MudTable T="EntrantAssignee" Items="@AssignedEntrants" Dense="true" Hover="true"
@@ -116,12 +134,15 @@
 </MudContainer>
 
 @code {
+    private MudTable<EntrantAssignee> _assignTable;
+
     List<Trait> AllTraits;
     List<Trait>? RelevantTraits;
     List<EntrantAssignee>? Entrants;
     List<EntrantAssignee> AssignedEntrants = new();
 
-    MudChip? entrantChip;
+    bool loadingEntrants = false;
+    Entrant activeEntrant = Entrant.None;
 
     protected override async Task OnInitializedAsync()
     {
@@ -136,12 +157,19 @@
         AllTraits = await _traitService.GetTraits(StateFilter.Active);
     }
 
-    async Task LoadEntrants()
+    async Task SetAndLoadEntrants(MudChip? entrantChip)
     {
         if (entrantChip == null)
             return;
 
-        var activeEntrant = (Entrant)entrantChip.Value;
+        activeEntrant = (Entrant)entrantChip.Value;
+
+        await LoadEntrants();
+    }
+
+    async Task LoadEntrants()
+    {
+        loadingEntrants = true;
 
         switch (activeEntrant)
         {
@@ -167,6 +195,8 @@
         }
 
         RelevantTraits = AllTraits.Where(e => e.Type == activeEntrant).ToList();
+
+        loadingEntrants = false;
     }
 
     private string GetReadableTrait(long id) => AllTraits.Find(e => e.Id == id)?.Name ?? "Unknown";
@@ -200,6 +230,11 @@
         assignee.ExistingTraitIds.Add(randomTrait.Id);
     }
 
+    private void PageChange(int index)
+    {
+        _assignTable.NavigateTo(index - 1);
+    }
+
     private async Task RemoveAssignedTrait(TableRowClickEventArgs<EntrantAssignee> rowItem)
     {
         bool? confirm = await _dialogService.ShowMessageBox(
@@ -208,15 +243,20 @@
             yesText: "Yep", cancelText: "Nope");
 
         if (confirm == true)
+        {
+            foreach (var assignedId in rowItem.Item.AssignedTraitIds)
+                rowItem.Item.ExistingTraitIds.Remove(assignedId);
+
             AssignedEntrants.Remove(rowItem.Item);
+        }
     }
 
     async Task PersistAssignedTraits()
     {
-        if (entrantChip == null || !AssignedEntrants.Any())
+        if (activeEntrant == Entrant.None || !AssignedEntrants.Any())
             return;
 
-        switch ((Entrant)entrantChip.Value)
+        switch (activeEntrant)
         {
             case Entrant.Driver:
                 await _traitService.AssignDriverTraits(AssignedEntrants);
