--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -22,6 +22,8 @@
 
     <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
 
+    <MudNavLink Href="/contracts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lightbulb">Contracts</MudNavLink>
+
     <MudNavLink Href="/legacy" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Planet">Legacy</MudNavLink>
 
     <MudNavLink Href="/credits" Match="NavLinkMatch.Prefix" Icon="@IconCollection.BrandVolkswagen">Credits</MudNavLink>
