--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -386,7 +386,7 @@
             List<DevelopmentRange> setCompareRange = ActiveAspectRanges;
             List<DevelopmentRange>? additionalCompareRange = null;
 
-            if (_activeEntrant == Entrant.Driver)
+            if (_activeEntrant == Entrant.Driver && _selectedTarget == Aspect.Skill)
                 additionalCompareRange = AgeRanges;
 
             if (setCompareRange.Any() || (additionalCompareRange?.Any() == true))
