--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -20,13 +20,13 @@
                     <MudText Typo="Typo.subtitle1">For entrants</MudText>
                     <MudDivider />
 
-                    <MudChipSet SelectedChipChanged="SetAndLoadEntrants" Mandatory="true" ReadOnly="@loadingEntrants">
+                    <MudChipSet @bind-SelectedChip="@entrantChip" Mandatory="true">
                         <MudChip Color="Color.Primary" Value="Entrant.Driver">Driver</MudChip>
                         <MudChip Color="Color.Primary" Value="Entrant.Team">Team</MudChip>
                         <MudChip Color="Color.Primary" Value="Entrant.Track">Track</MudChip>
                     </MudChipSet>
 
-                    @*<MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="LoadEntrants">Load</MudButton>*@
+                    <MudButton Color="Color.Primary" Variant="Variant.Outlined" OnClick="LoadEntrants">Load</MudButton>
 
                     <MudText Typo="Typo.subtitle1" Class="mt-2">Assignment settings</MudText>
                     <MudDivider />
@@ -61,41 +61,32 @@
             <MudPaper Class="pa-2">
                 <MudText>Click on the button 'Random' to assign a random trait to a random entrant</MudText>
                 <MudText>Click on a driver to assign a random trait to them</MudText>
-                @if (Entrants != null)
-                {
-                    <MudTable T="EntrantAssignee"
-                              Items="@Entrants"
-                              RowsPerPage="15"
-                              Dense="true"
-                              Hover="true"
-                              OnRowClick="OnClickAssignRandomTrait">
-                        <ToolBarContent>
-                            <MudText Typo="Typo.h5">Entrants</MudText>
-                            <MudSpacer />
-                            <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="RandomEntrantAssignTrait">Random</MudButton>
-                        </ToolBarContent>
-                        <HeaderContent>
-                            <MudTh>Name</MudTh>
-                            <MudTh>Current trait(s)</MudTh>
-                        </HeaderContent>
-                        <RowTemplate>
-                            <MudTd>
-                                <MudText>@context.Name</MudText>
-                            </MudTd>
-                            <MudTd>
-                                @foreach (var traitId in context.ExistingTraitIds)
-                                {
-                                    <MudText Typo="Typo.body2">@(GetReadableTrait(traitId))</MudText>
-                                }
-                            </MudTd>
-                        </RowTemplate>
-                        <PagerContent>
-                            <MudPagination SelectedChanged="PageChange" Count="@((_assignTable.GetFilteredItemsCount() + _assignTable.RowsPerPage - 1) / _assignTable.RowsPerPage)"
-                                           Variant="Variant.Outlined"
-                                           Class="pa-4" />
-                        </PagerContent>
-                    </MudTable>
-                }
+                <MudTable T="EntrantAssignee"
+                          Items="@Entrants"
+                          Dense="true"
+                          Hover="true"
+                          OnRowClick="OnClickAssignRandomTrait">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h5">Entrants</MudText>
+                        <MudSpacer />
+                        <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="RandomEntrantAssignTrait">Random</MudButton>
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>Name</MudTh>
+                        <MudTh>Current trait(s)</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd>
+                            <MudText>@context.Name</MudText>
+                        </MudTd>
+                        <MudTd>
+                            @foreach (var traitId in context.ExistingTraitIds)
+                            {
+                                <MudText Typo="Typo.body2">@(GetReadableTrait(traitId))</MudText>
+                            }
+                        </MudTd>
+                    </RowTemplate>
+                </MudTable>
             </MudPaper>
         </MudItem>
         <MudItem xs="4">
@@ -134,12 +125,14 @@
 </MudContainer>
 
 @code {
-    private MudTable<EntrantAssignee> _assignTable;
+    private MudTable<EntrantAssignee> _table;
 
-    List<Trait> AllTraits;
-    List<Trait>? RelevantTraits;
-    List<EntrantAssignee>? Entrants;
-    List<EntrantAssignee> AssignedEntrants = new();
+    List<Trait> AllTraits { get; set; }
+    List<Trait>? RelevantTraits { get; set; }
+    List<EntrantAssignee> Entrants { get; set; } = new();
+    List<EntrantAssignee> AssignedEntrants { get; set; } = new();
+
+    MudChip? entrantChip;
 
     bool loadingEntrants = false;
     Entrant activeEntrant = Entrant.None;
@@ -157,19 +150,23 @@
         AllTraits = await _traitService.GetTraits(StateFilter.Active);
     }
 
-    async Task SetAndLoadEntrants(MudChip? entrantChip)
+    //async Task SetAndLoadEntrants(MudChip? entrantChip)
+    //{
+    //    if (entrantChip == null)
+    //        return;
+
+    //    activeEntrant = (Entrant)entrantChip.Value;
+
+    //    await LoadEntrants();
+    //}
+
+    async Task LoadEntrants()
     {
         if (entrantChip == null)
             return;
 
-        activeEntrant = (Entrant)entrantChip.Value;
-
-        await LoadEntrants();
-    }
-
-    async Task LoadEntrants()
-    {
         loadingEntrants = true;
+        activeEntrant = (Entrant)entrantChip.Value;
 
         switch (activeEntrant)
         {
@@ -197,6 +194,7 @@
         RelevantTraits = AllTraits.Where(e => e.Type == activeEntrant).ToList();
 
         loadingEntrants = false;
+        StateHasChanged();
     }
 
     private string GetReadableTrait(long id) => AllTraits.Find(e => e.Id == id)?.Name ?? "Unknown";
@@ -232,7 +230,7 @@
 
     private void PageChange(int index)
     {
-        _assignTable.NavigateTo(index - 1);
+        _table.NavigateTo(index - 1);
     }
 
     private async Task RemoveAssignedTrait(TableRowClickEventArgs<EntrantAssignee> rowItem)
