--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -24,6 +24,11 @@
                           RowsPerPage="15"
                           Dense="true"
                           Hover="true">
+                    <ToolBarContent>
+                        <MudText>Select a bunch of races to add if you will</MudText>
+                        <MudSpacer />
+                        <MudText>Races selected: @(selectedTracks.Count())</MudText>
+                    </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
                         <MudTh>Country</MudTh>
