--- a/SimTECH/SimTECH/Pages/Contracts/Contracts.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/Contracts.razor
@@ -21,7 +21,7 @@
     </MudPaper>
     <MudDataGrid T="Contract" Items="@ContractData" Dense="true">
         <Columns>
-            <PropertyColumn Property="e => e.League.Name" />
+            <PropertyColumn Property="e => e.League.Name" Title="League" />
             <PropertyColumn Property="e => e.Team.Name" />
             <PropertyColumn Property="e => e.Driver.FullName" />
             <PropertyColumn Property="e => e.Duration" />
