--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/MudTdResult.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/MudTdResult.razor
@@ -21,6 +21,7 @@
     [Parameter] public StandingResultCell? Result { get; set; }
     [Parameter] public int LowestScoringPosition { get; set; }
     [Parameter] public Typo? OverrideTypo { get; set; }
+    [Parameter] public bool WithBonus { get; set; } = true;
     [Parameter] public string Class { get; set; } = string.Empty;
 
     private Typo _typo { get; set; } = Typo.h4;
